Correct spacing in name/title on leaders callout
https://www.pivotaltracker.com/story/show/174074761

--- a/packages/leaders-program/src/scss/components/_key-executive.scss
+++ b/packages/leaders-program/src/scss/components/_key-executive.scss
@@ -18,9 +18,4 @@
     font-weight: $leaders-key-executive-font-weight;
   }
 
-  &__title {
-    &::before {
-      content: ", ";
-    }
-  }
 }
